--- a/package.json
+++ b/package.json
@@ -4,17 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel index.html",
+    "build:css": "postcss styles.css -o output.css",
+    "build": "parcel build index.html",
+    "runDev": "postcss styles.css -o output.css && parcel index.html"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "dotenv": "^16.4.5",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "autoprefixer": "^10.4.20",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
+    "os-browserify": "^0.3.0",
+    "parcel": "^2.12.0",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.4.47",
+    "postcss-cli": "^11.0.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "string_decoder": "^1.3.0",
+    "tailwindcss": "^3.4.14",
+    "vm-browserify": "^1.1.2"
   }
 }
